# medpoisk-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  compose.yaml  create_db.sql  docker_run.sh  medpoisk.sql  migration.sql  pyproject.toml
alembic/: env.py
alembic/versions/: add_picture_url_to_product_915d27de520b.py  add_users_roles_divisions_privilages_720ad8b4711a.py  bytea_pass_hash_71bf33f1c8b6.py  init_19f977649fc1.py  init_285bea494e0c.py  init_4a2b2f8589c8.py  init_7ae6dcd6bc15.py  init_87e34954be29.py  init_ada57440cdbb.py  init_cad3a6087ed9.py  init_e68670945b66.py  rename_role_id_column_198c96ee4983.py
medpoisk_server/: __main__.py  app.py  cli.py  config.py  crud.py  database.py  dependencies.py  exceptions.py  http_exceptions.py  main.py  models.py  schemas.py  security.py
medpoisk_server/crud/: __init__.py  balance_crud.py  division.py  doctor_crud.py  doctors.py  employee.py  employee_crud.py  inventory.py  inventory_crud.py  invoice.py  invoice_crud.py  limits.py  limits_crud.py  place.py  place_crud.py  places.py  position.py  position_crud.py  positions.py  product.py  product_crud.py  products.py  profile.py  profile_crud.py  room.py  room_crud.py  rooms.py  transaction_crud.py  users.py  utils.py
medpoisk_server/models/: __init__.py  balacnce_model.py  (+30 more)
scripts/: create_db.sql  docker_run.sh  drop_tables.sh  gen_token.sh  inflate_db.sh  inflate_db.sql  init_db.sh  init_db.sql  revision.sh  run_dev.sh
tests/: auth_test.py  inventory_test.py  limits_test.py  places_test.py  product_test.py  profile_test.py  room_test.py  test.py
(+53 files in other folders)
